Dự Án Hoàn Thiện!

--- a/src/main/resources/templates/admin/layouts/header.html
+++ b/src/main/resources/templates/admin/layouts/header.html
@@ -268,7 +268,7 @@
                         aria-expanded="false">
                     <img class="rounded-circle header-profile-user" src="https://scontent.fhan2-4.fna.fbcdn.net/v/t39.30808-6/287523929_566504204927246_4881580140866451849_n.jpg?stp=dst-jpg_p526x296&_nc_cat=100&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=R8h6bI_ttn4Q7kNvgF5CQtC&_nc_ht=scontent.fhan2-4.fna&oh=00_AYDTBNCZ4PKhFb6LELAx_2CFzA5wcSS-CYpToBLxkB8s6g&oe=66AD84FF"
                          alt="Header Avatar">
-                    <span class="d-none d-xl-inline-block ms-1 fw-medium">Trường Thắng</span>
+                    <span class="d-none d-xl-inline-block ms-1 fw-medium">Sneaker</span>
                     <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
                 </button>
                 <div class="dropdown-menu dropdown-menu-end">
